tests/NormalTests/paczka1/small_fuzzy/34077615.err
Error in line 2: ohyoGz A757 49,7
Error in line 6: dHW A757 858,2
